--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <java.version>1.8</java.version>
         <auto-service.version>1.0-rc4</auto-service.version>
         <lombok.version>1.18.4</lombok.version>
+
+        <javaee.version>7.0</javaee.version>
+        <mysqldriver.version>8.0.13</mysqldriver.version>
     </properties>
 
 
@@ -40,7 +43,27 @@
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>7.0</version>
+            <version>${javaee.version}</version>
+        </dependency>
+
+        <!-- TESTS -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.13</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.3.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.vorburger.mariaDB4j</groupId>
+            <artifactId>mariaDB4j</artifactId>
+            <version>2.3.0</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
