Issue 172: change booking date request - client

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <version>1.7.25</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- -->
+        <dependency>
+            <groupId>com.github.jasync-sql</groupId>
+            <artifactId>jasync-r2dbc-mysql</artifactId>
+            <version>1.0.14</version>
+        </dependency>
     </dependencies>
 
     <build>
