--- a/pom.xml
+++ b/pom.xml
@@ -74,11 +74,11 @@
         </dependency>
 
         <!-- -->
-        <dependency>
-            <groupId>com.github.jasync-sql</groupId>
-            <artifactId>jasync-r2dbc-mysql</artifactId>
-            <version>1.0.14</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.jasync-sql</groupId>-->
+<!--            <artifactId>jasync-r2dbc-mysql</artifactId>-->
+<!--            <version>1.0.14</version>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
