--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>11</java.version>
-        <auto-service.version>1.0-rc4</auto-service.version>
+        <auto-service.version>1.0</auto-service.version>
         <lombok.version>1.18.18</lombok.version>
 
         <mysqldriver.version>8.0.13</mysqldriver.version>
